<resources>
    <string name="app_name">Games</string>
    <string name="text_name">Name</string>
    <string name="text_senha">Senha</string>
    <string name="text_ola">Olá </string>
    <string name="text_produto">Produto</string>
    <string name="text_valor">Valor</string>
    <string name="text_btn_enviar">ENVIAR</string>
    <string name="text_btn_voltar">Voltar</string>
    <string name="text_view_total">Total</string>
    <string name="text_view_preco">00,00</string>
    <string name="text_entrar">ENTRAR</string>
</resources>
